--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyland Predictor</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="header">
+        <div id="eventCountdown"></div>
+        <div class="title">Joyland Adventure Predictor (V1.0.0)</div>
+        <div id="currentDateTime"></div>
+    </div>
     <div class="container">
         <div class="description">
-            <div class="left-desc">This is for strategy helping purposes, get a feel of how the predictor works and is always open!</div>
-            <div class="right-desc">Your given data will be remembered, it will calculate the best approach for you, make sure to follow the instructions given.</div>
+            <div class="left-desc">
+                <p>This is for strategy helping purposes,<br>get a feel of how the predictor works<br>and is always open!</p>
+            </div>
+            <div class="right-desc">
+                <p>Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</p>
+            </div>
         </div>
         <div class="buttons">
             <button onclick="location.href='simulator.html'">SIMULATION</button>
