--- a/index.html
+++ b/index.html
@@ -10,22 +10,20 @@
 </head>
 <body>
     <div class="header">
-        <div id="eventCountdown"></div>
-        <div class="title">Joyland Adventure Predictor (V1.0.0)</div>
-        <div id="currentDateTime"></div>
+        <div id="eventCountdown" class="countdown"></div>
+        <div id="currentDateTime" class="datetime"></div>
     </div>
+    <div class="title">Joyland Adventure Predictor (V1.0.0)</div>
     <div class="container">
         <div class="description">
             <div class="left-desc">
                 <p>This is for strategy helping purposes,<br>get a feel of how the predictor works<br>and is always open!</p>
+                <button onclick="location.href='simulator.html'">SIMULATION</button>
             </div>
             <div class="right-desc">
                 <p>Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</p>
+                <button onclick="alert('Predictor page coming soon')">PREDICTOR</button>
             </div>
-        </div>
-        <div class="buttons">
-            <button onclick="location.href='simulator.html'">SIMULATION</button>
-            <button onclick="alert('Predictor page coming soon')">PREDICTOR</button>
         </div>
     </div>
 </body>
