--- a/simulator.html
+++ b/simulator.html
@@ -37,6 +37,7 @@
             <tr><td>8. Chaos Blitz Amount:</td><td><input type="number" id="chaos"></td></tr>
         </table>
         <button id="confirm" style="display:none" onclick="saveData()">Confirm</button>
+        <button id="nextPage" style="display:none" onclick="location.href='predictor.html'">Go to Predictor</button>
         <button onclick="location.href='index.html'">Back</button>
     </div>
     <script src="script.js"></script>
