--- a/simulator.html
+++ b/simulator.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joyland Adventure Predictor</title>
+    <title>Joyland Adventure Predictor - Simulation Setup</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -40,6 +41,5 @@
         <button id="nextPage" style="display:none" onclick="location.href='predictor.html'">Go to Predictor</button>
         <button onclick="location.href='index.html'">Back</button>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
