--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joyland Predictor</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Joyland Predictor</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="header">
-        <div id="eventCountdown" class="countdown"></div>
-        <div id="currentDateTime" class="datetime"></div>
+  <div class="header">
+    <div id="eventCountdown" class="countdown"></div>
+    <div id="currentDateTime" class="datetime"></div>
+  </div>
+  <div class="title">Joyland Adventure Predictor (V1.0.0)</div>
+  <div class="container">
+    <div class="description">
+      <div class="left-desc">
+        <p>This is for strategy helping purposes,<br>get a feel of how the predictor works<br>and is always open!</p>
+        <button onclick="location.href='simulator.html'">SIMULATION</button>
+      </div>
+      <div class="right-desc">
+        <p>Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</p>
+        <button onclick="location.href='predictor.html'">PREDICTOR</button>
+      </div>
     </div>
-    <div class="title">Joyland Adventure Predictor (V1.0.0)</div>
-    <div class="container">
-        <div class="description">
-            <div class="left-desc">
-                <p>This is for strategy helping purposes,<br>get a feel of how the predictor works<br>and is always open!</p>
-                <button onclick="location.href='simulator.html'">SIMULATION</button>
-            </div>
-            <div class="right-desc">
-                <p>Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</p>
-                <button onclick="alert('Predictor page coming soon')">PREDICTOR</button>
-            </div>
-        </div>
-    </div>
+  </div>
 </body>
 </html>
