--- a/predictor.html
+++ b/predictor.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joyland Predictor Simulator</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="predictor.js" defer></script>
+  <link rel="stylesheet" href="predictor_style.css">
+  <script src="predictor_script.js" defer></script>
 </head>
 <body>
   <div class="header">
-    <div class="dropdown-left">
+    <div class="risk-display">
       <label>Risk Level:</label>
-      <select id="risk"></select>
+      <span id="riskValue"></span>
     </div>
-    <div class="dropdown-right">
+    <div class="priority-display">
       <label>Priority:</label>
-      <select id="priority"></select>
+      <span id="priorityValue"></span>
     </div>
   </div>
   <div class="title">Joyland Adventure Predictor Simulator</div>
