--- a/simulator.html
+++ b/simulator.html
@@ -40,7 +40,7 @@
       </table>
     </div>
     <button id="confirm" style="display:none" onclick="saveData()">Confirm</button>
-    <button id="nextPage" style="display:none" onclick="location.href='predictor.html'">Go to Predictor</button>
+    <button id="nextPage" style="display:none" onclick="location.href='predictor_simulation.html'">Go to Predictor</button>
     <button onclick="location.href='index.html'">Back</button>
   </div>
 </body>
