--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="right-desc">
         <p>Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</p>
-        <button onclick="location.href='predictor.html'">PREDICTOR</button>
+        <button onclick="location.href='predictor_main.html'">PREDICTOR</button>
       </div>
     </div>
   </div>
