--- a/simulator.html
+++ b/simulator.html
@@ -1,6 +1,13 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<div style="text-align:center; margin: 30px 0;">
+  simulator.htmlSIMULATION</a>
+</div>
+<div style="text-align:center; margin: 30px 0;">
+  <a href="_main.htmlPREDICTOR</a>
+</div>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
