--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Joyland Predictor</title>
-  <link rel="stylesheet" href="landing_style.css">
-  <script src="landing_script.js" defer></script>
+  <title>Joyland Adventure Predictor (V1.0.0)</title>
 </head>
 <body>
-  <div class="header">
-    <div id="eventCountdown" class="countdown"></div>
-    <div id="currentDateTime" class="datetime"></div>
+  <h1 style="text-align:center;">Joyland Adventure Predictor (V1.0.0)</h1>
+
+  <div style="text-align:center; margin: 30px 0;">
+    <p>This is for strategy helping purposes,<br>get a feel of how the predictor works<br>and is always open!</p>
+    <button onclick="window.location.href='simulator.html'">SIMULATION</button>
   </div>
-  <div class="title">Joyland Adventure Predictor (V1.0.0)</div>
-  <div class="container">
-    <div class="description">
-      <div class="left-desc">
-        <p>This is for strategy helping purposes,<br>get a feel of how the predictor works<br>and is always open!</p>
-        <button onclick="location.href='simulator.html'">SIMULATION</button>
-      </div>
-      <div class="right-desc">
-        <p>Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</p>
-        <button onclick="location.href='predictor_main.html'">PREDICTOR</button>
-      </div>
-    </div>
+
+  <div style="text-align:center; margin: 30px 0;">
+    <p>Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</p>
+    <button onclick="window.location.href='predictor_main.html'">PREDICTOR</button>
   </div>
 </body>
 </html>
