--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Joyland Adventure Predictor Simulator</title>
   css/predictor_style.css
-  <script src="js/predictor_script_simulation</head>
+  js/predictor_script_simulation.js</script>
+</head>
 <body>
   <div class="predictor-container">
-    <!-- Top: Risk Level and Priority -->
     <div class="predictor-header">
       <div class="predictor-dropdown">
         <label for="riskLevel">Risk Level:</label>
@@ -29,16 +29,10 @@
       </div>
     </div>
 
-    <!-- Title -->
     <h1 class="predictor-title">Joyland Adventure Predictor Simulator</h1>
 
-    <!-- Centered GIF -->
     <div class="predictor-gif">
-      uncertain.gif
-    </div>
-
-    <!-- Input line -->
-    <div class="predictor-inputs">
+      <img id="predictionGif" src=" <div class="predictor-inputs">
       <label for="encounterType">Encounter:</label>
       <select id="encounterType">
         <option>Normal encounter</option>
@@ -58,35 +52,17 @@
       <input id="amount" type="number" placeholder="Amount" style="display:none;width:80px;">
     </div>
 
-    <!-- Buttons -->
     <div class="predictor-buttons">
-      <buttonor.htmlBack</button>
+      <button onclick="windowton>
       <button onclick="recordEncounter()">Record</button>
     </div>
 
-    <!-- Prediction summary -->
     <div class="predictor-summary">
       <div id="patternInfo"></div>
       <div id="nextSymbol"></div>
       <div id="evInfo"></div>
       <div id="suggestion"></div>
-    </div>
-
-    <!-- Show summary checkbox -->
-    <div class="predictor-summary-toggle" style="text-align:center;margin-top:20px;">
-      <input type="checkbox" id="showSummary">
-      <label for="showSummary" style="display:inline-block;max-width:300px;line-height:1.2;">
-        Do you have a session saved already?<br>
-        (Check to view/import/export your session data)
-      </label>
-    </div>
-
-    <!-- Summary/Import/Export section (hidden by default) -->
-    <div id="summarySection" style="display:none;text-align:center;">
-      <div id="summaryOutput" style="margin:10px 0;"></div>
-      <button onclick="exportData()">Export Data</button>
-      <textarea id="importArea" placeholder="Paste JSON here" style="width:90%;height:60px;"></textarea>
-      <button onclick="importData()">Import Data</button>
+      <div id="gcPower"></div>
     </div>
   </div>
 </body>
