--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
   <div class="center-row">
     <div class="center-col">
       <div class="desc">This is for strategy helping purposes,<br>get a feel of how the predictor works<br>and is always open!</div>
-      simulator.htmlSIMULATION</button>
+      <button id="SIMULATION" style="display:none" onclick="location.href='simulator.html'">SIMULATION</button>
     </div>
     <div class="center-col">
       <div class="desc">Your given data will be remembered,<br>it will calculate the best approach for you,<br>make sure to follow the instructions given.</div>
-      predictor_main.htmlPREDICTOR</button>
+      <button id="PREDICTOR" style="display:none" onclick="location.href='predictor_main.html'">PREDICTOR</button>
     </div>
   </div>
 </body>
