--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Joyland Adventure Predictor (V1.0.0)</title>
-  style.css
-  <style>
+  <link rel="stylesheet" href="style.css">
     .top-left { position: absolute; top: 20px; left: 30px; font-weight: bold; font-size: 1.1em; }
     .top-right { position: absolute; top: 20px; right: 30px; font-weight: bold; font-size: 1.1em; }
     .main-title { text-align: center; font-size: 2.5em; font-weight: bold; margin-top: 60px; margin-bottom: 60px; }
