--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Joyland Adventure Predictor Simulator</title>
+  <link rel="stylesheet" href="predictor_style.css">
   <script src="predictor_script_simulation.jsead>
 <body>
   <div class="header">
