--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -30,6 +30,10 @@
 
   <div class="title">Joyland Adventure Predictor Simulator</div>
 
+  <div class="meter-display">
+    Total Meters Traveled: <span id="totalMeters">0</span>
+  </div>
+
   <div class="gif-container">
     <img id="predictionGif" src="uncertain.gif" alt="Prediction GIF">
   </div>
@@ -65,6 +69,8 @@
     <div id="evInfo"></div>
     <div id="suggestion"></div>
     <div id="gcPower"></div>
+    <div id="totalJC">Total JC Acquired: 0</div>
+    <div id="totalGC">Total GC Acquired: 0</div>
   </div>
 
   <div style="text-align:center; margin-top:20px;">
