--- a/predictor_simulation.html
+++ b/predictor_simulation.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Joyland Adventure Predictor Simulator</title>
-  <link rel="stylesheet" href="predictor_style.css">
-  <script src="predictor_script_simulation.js" defer></script>
-</head>
 <body>
   <div class="header">
     <div class="dropdown-left">
@@ -16,6 +8,11 @@
         <option>High Risk</option>
       </select>
     </div>
+
+    <div class="dropdown-center">
+      <button onclick="confirmDeleteRecords()">Delete All Records</button>
+    </div>
+
     <div class="dropdown-right">
       Priority:
       <select id="priority">
@@ -30,12 +27,9 @@
 
   <div class="title">Joyland Adventure Predictor Simulator</div>
 
-  <div class="meter-display">
-    Total Meters Traveled: <span id="totalMeters">0</span>
-  </div>
-
   <div class="gif-container">
-    <img id="predictionGif" src="uncertain.gif" alt="Prediction GIF">
+    <img id="predictionGif" src="uncertain.gif" alt="Prediction GIFign:center; margin: 20px auto; font-weight:bold; font-size:1.2em;">
+    Total Meters Traveled: <span id="totalMeters">0</span>
   </div>
 
   <div class="input-line">
@@ -59,8 +53,14 @@
   </div>
 
   <div class="button-line">
-    <button onclick="window.location.href='simulator.html'">Back</button>
+    simulator.htmlBack</button>
     <button onclick="recordEncounter()">Record</button>
+  </div>
+
+  <div class="summary" style="text-align:center; margin-top:10px;">
+    <div id="totalJC">Total JC Acquired: 0</div>
+    <div id="totalGC">Total GC Acquired: 0</div>
+    <div id="totalCombined">Total JC + GC: 0</div>
   </div>
 
   <div class="summary">
@@ -69,8 +69,6 @@
     <div id="evInfo"></div>
     <div id="suggestion"></div>
     <div id="gcPower"></div>
-    <div id="totalJC">Total JC Acquired: 0</div>
-    <div id="totalGC">Total GC Acquired: 0</div>
   </div>
 
   <div style="text-align:center; margin-top:20px;">
@@ -88,4 +86,3 @@
     <button onclick="importData()">Import Data</button>
   </div>
 </body>
-</html>
